; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Virtual.c_VirtualArpSendResponse.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Virtual.c_VirtualArpSendResponse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32* }
%struct.TYPE_7__ = type { i32, i32, i8*, i8*, i32, i32, i8*, i8*, i8* }

@ARP_HARDWARE_TYPE_ETHERNET = common dso_local global i32 0, align 4
@MAC_PROTO_IPV4 = common dso_local global i32 0, align 4
@ARP_OPERATION_RESPONSE = common dso_local global i32 0, align 4
@MAC_PROTO_ARPV4 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VirtualArpSendResponse(%struct.TYPE_6__* %0, i32* %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_7__, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %11 = icmp eq %struct.TYPE_6__* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %4
  %13 = load i32*, i32** %6, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %12, %4
  br label %49

16:                                               ; preds = %12
  %17 = load i32, i32* @ARP_HARDWARE_TYPE_ETHERNET, align 4
  %18 = call i8* @Endian16(i32 %17)
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 8
  store i8* %18, i8** %19, align 8
  %20 = load i32, i32* @MAC_PROTO_IPV4, align 4
  %21 = call i8* @Endian16(i32 %20)
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 7
  store i8* %21, i8** %22, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  store i32 6, i32* %23, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 1
  store i32 4, i32* %24, align 4
  %25 = load i32, i32* @ARP_OPERATION_RESPONSE, align 4
  %26 = call i8* @Endian16(i32 %25)
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 6
  store i8* %26, i8** %27, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 5
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %31 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %30, i32 0, i32 0
  %32 = load i32*, i32** %31, align 8
  %33 = call i32 @Copy(i32 %29, i32* %32, i32 6)
  %34 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 4
  %35 = load i32, i32* %34, align 8
  %36 = load i32*, i32** %6, align 8
  %37 = call i32 @Copy(i32 %35, i32* %36, i32 6)
  %38 = load i8*, i8** %8, align 8
  %39 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 3
  store i8* %38, i8** %39, align 8
  %40 = load i8*, i8** %7, align 8
  %41 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 2
  store i8* %40, i8** %41, align 8
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %43 = load i32*, i32** %6, align 8
  %44 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %45 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %44, i32 0, i32 0
  %46 = load i32*, i32** %45, align 8
  %47 = load i32, i32* @MAC_PROTO_ARPV4, align 4
  %48 = call i32 @VirtualLayer2Send(%struct.TYPE_6__* %42, i32* %43, i32* %46, i32 %47, %struct.TYPE_7__* %9, i32 56)
  br label %49

49:                                               ; preds = %16, %15
  ret void
}

declare dso_local i8* @Endian16(i32) #1

declare dso_local i32 @Copy(i32, i32*, i32) #1

declare dso_local i32 @VirtualLayer2Send(%struct.TYPE_6__*, i32*, i32*, i32, %struct.TYPE_7__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
